syntax = "proto3";

package progress;

option go_package = "proto/";

service ProgressProcess {
  rpc Run(ProgressRequest) returns (stream ProgressResponse) {}
}

message ProgressRequest {
  string refresh_interval = 1;
}

message ProgressResponse {
  // change request total
  uint64 requests = 1;
  uint64 duration = 2;
  uint64 rps = 3;
  float error_rate = 4;
  bool is_finished = 5;
  // workload data
  string job_name = 6;
  uint64 request_duration = 7;
  uint64 request_operations = 8;
}
